# UnwantedSearchEngine

./: Cargo.toml  README.md  dataDoc10.sql  dataDoc5.sql  dataDoc6.sql  dataDoc8.sql  dataDoc9.sql  entities.sql  linker.ps1  runWizard.bat  wizard.ps1
schemaBatches/: dataDoc1.sql  dataDoc2.sql  dataDoc3.sql  dataDoc4.sql  dataDoc7.sql  entities.sql
src/: drawingHandler.rs  main.rs  updateHandler.rs  windowHandler.rs
src/components/: mod.rs  outputArea.rs  searchbar.rs
src/components/buttons/: mod.rs  toggleButton.rs
src/components/dialogs/: mod.rs  quitDialog.rs
src/utils/: keybindings.rs
winSolution/: installation.bat
