[package]
name = "UnwantedSearchEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = "5.5.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
url = "2.5.4"

[lints]
rust.non_snake_case= "allow"
